--- a/config/database.yml
+++ b/config/database.yml
@@ -3,21 +3,21 @@ development:
   encoding: unicode
   database: meetinglibs_development
   pool: 5
-  username: <%= Etc.getpwuid(Process.uid).name %>
-  password:
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 test:
   adapter: postgresql
   encoding: unicode
   database: meetinglibs_test
   pool: 5
-  username: <%= Etc.getpwuid(Process.uid).name %>
-  password:
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 production:
   adapter: postgresql
   encoding: unicode
   database: meetinglibs
   pool: 5
-  username: meetinglibs
-  password:
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
