--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_script:
   - psql -U $POSTGRES_USER -c 'create database meetinglibs_test;'
 
 script:
-  - bundle exec rake db:test:prepare
+  - bundle exec rake db:schema:load db:test:prepare
   - bundle exec rspec
   - bundle exec guard-jasmine
