Travis CI secrets should be double-quoted.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
 
 env:
   global:
-    - secret: 'GtXGVAIHLAuH4CAq+fb/zSBuF7oO96stPfU0R81WEW47kwZ6A7G4xJPREU+O\nPsik1tEjUUY2T+m6rrEe7QOfMuoMMjIFnemSYlKzH/fBmvahvpkvNOgvtFuS\nLgyCLXcwnnSGzJvGmKBZSZ0zHP8FElpAiIo14eH/unOBoO4tlgo='
+    - secret: "fgZ62h8S4snfyLUOXurKuYgoQsJQdU9x3G8UVjdvr1AVp5RJVQTMIi333m4y\nrX03lvBsaatksTa8RNu+UUacaoJcomy940+6DTIl1dawXt2R9Per6/zJh3Im\nuUjJSrEgz6Gj9xie0E8DnxBWx7whbGW1r+mwR3dpcfiv7szEsxU="
     - POSTGRES_USER=postgres
 
 branches:
