Use db:setup instead of db:migrate in CI build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ before_script:
   - psql -U $POSTGRES_USER -c 'create database meetinglibs_test;'
 
 script:
-  - bundle exec rake db:migrate db:test:prepare
+  - bundle exec rake db:setup db:test:prepare
   - bundle exec rspec
   - bundle exec guard-jasmine
