Attempt to fix CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,10 @@ branches:
     - master
     - /^feature-.*$/
 
-script:
+before_script:
   - bundle exec rake db:setup
+  - bundle exec rake db:test:prepare
+
+script:
   - bundle exec rspec
   - bundle exec guard-jasmine
