--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ branches:
     - master
     - /^feature-.*$/
 
-script:
+before_script:
   - bundle exec rake db:setup
+
+script:
   - bundle exec rspec
   - bundle exec guard-jasmine
