Increase Capybara timeout on CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   global:
     - secure: "ssfpq4XY3RUl6j8eUnDrq2GB+LwGl2Vdly2ffbBkggdUtVP1rHsv2/NXuLiN\nXAFStwVYxIJEyCVSh2sGqTsSgIoe5ogtIaYOAzi9zY2G+ddoUo11R3n4PzkX\nR3+SQyqO6n6w95KqaxLQnUVTxxptO5Yk+0HpC3KeZN4R/fbC+x4="
     - POSTGRES_USER=postgres
+    - CAPYBARA_WAIT_TIME=8
 
 branches:
   only:
